[project]
name = "customer-service-env"
version = "1.0.0"
description = "OpenEnv-compatible customer service RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn==0.38.0",
    "pydantic==2.11.9",
    "openai==2.30.0",
    "requests==2.32.5",
    "websockets==16.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "customer-service-env"
version = "1.0.0"
entry_point = "server.app:app"
port = 8000

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]